# notifications_from_sahibinden

./: .env.sample  Makefile  README.md  config.py  docker-compose.yaml  pyproject.toml
app/: __main__.py  data.py  get_data.py  models.py  mongo.py  processing.py  tasks.py  update_areas_in_db.py
bot/: __init__.py  __main__.py  bot.py  conversation.py  get_id.py  models.py  notification.py
deploy/app/: Dockerfile
deploy/notifications_from_sahibinden/: Dockerfile
notifications_from_sahibinden/: config.py  data.py  models.py  mongo.py  tasks.py
notifications_from_sahibinden/utils/: mongo.py  telegram.py
telegram/: __main__.py  bot.py  notification.py
