[tool.poetry]
name = "notifications_from_sahibinden"
version = "0.1.0"
description = ""
authors = ["a-paktusov@yandex.ru <83519069946>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
