[tool.poetry]
name = "notifications_from_sahibinden"
version = "0.1.0"
description = ""
authors = ["Arkadii Paktusov <paktusov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
requests = "^2.28.1"
selenium = "^4.5.0"
packaging = "^21.3"
pymongo = "^4.3.2"
pyTelegramBotAPI = "^4.7.1"
python-dotenv = "^0.21.0"
celery = {extras = ["redis"], version = "^5.2.7"}
ratelimit = "^2.2.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
